--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
     </footer>
 
     <!-- Cart -->
-    <div class="cart">
+    <div class="cart side_cart">
       <div class="cart_btn">
         <a href="#" class="back_btn">Back</a>
       </div>
