--- a/terms.html
+++ b/terms.html
@@ -270,7 +270,7 @@
     </div>
 
     <!-- Cart -->
-    <div class="cart">
+    <div class="cart side_cart">
       <div class="cart_btn">
         <a href="#" class="back_btn">Back</a>
       </div>
