--- a/terms.html
+++ b/terms.html
@@ -166,6 +166,10 @@
                 </ul>
               </li>
 
+              <li class="close_dropdown d-none d-lg-block">
+                <i class="fas fa-xmark"></i>
+              </li>
+
               <li class="d-lg-none"><a href="about.html" class="menu_link">About Us</a></li>
               <li class="d-lg-none"><a href="delivery.html" class="menu_link">Delivery Inforamation</a></li>
               <li class="d-lg-none"><a href="shipping.html" class="menu_link">Shipping & Exchange</a></li>
@@ -189,7 +193,7 @@
               <sup>2</sup>
             </li>
             <li>
-              <button><img src="./assets/img/Icons/03.png" alt="" /></button>
+              <button onclick="accountPage()"><img src="./assets/img/Icons/03.png" alt="" /></button>
             </li>
           </ul>
         </div>
@@ -340,7 +344,7 @@
           <span class="span_title">Total</span>
           <span class="price">3300 /-</span>
         </div>
-        <div class="checkout">
+        <div class="checkout" onclick="checkoutPage()">
           <button class="sign_in">Checkout</button>
         </div>
       </div>
@@ -383,7 +387,7 @@
             <ul>
               <li><a href="privacy.html">Privacy Policy</a></li>
               <li><a href="terms.html">Terms and Conditions</a></li>
-              <li><a href="checkout.html">Delivery Information</a></li>
+              <li><a href="delivery.html">Delivery Information</a></li>
               <li><a href="shipping.html">Shipping & Exchanges</a></li>
               <li><a href="product_list.html">Product List</a></li>
               <li><a href="product_detail.html">Product Details</a></li>
@@ -407,16 +411,16 @@
         <div class="copyright">
           <ul class="socials">
             <li>
-              <a href="#"><i class="fab fa-facebook"></i></a>
+              <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-twitter"></i></a>
+              <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-instagram"></i></a>
+              <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fab fa-pinterest"></i></a>
+              <a href="https://www.pinterest.com/"><i class="fab fa-pinterest"></i></a>
             </li>
           </ul>
           <div class="copyright_msg">
