Icon and Fonts are changed

--- a/product_list.html
+++ b/product_list.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/css/fontawesome.min.css" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/img/company/Logo (Fabicon).svg" type="image/x-icon" />
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -181,19 +181,19 @@
           </nav>
           <div class="header_logo">
             <a href="index.html">
-              <img src="./assets/img/company/01.png" alt="" />
+              <img src="./assets/img/company/01.svg" alt="" />
             </a>
           </div>
           <ul class="header_right">
             <li class="search_icon">
-              <button><img src="./assets/img/Icons/01.png" alt="" /></button>
+              <button><img src="./assets/img/Icons/01.svg" alt="" /></button>
             </li>
             <li class="cart_icon">
-              <button><img src="./assets/img/Icons/02.png" alt="" /></button>
+              <button><img src="./assets/img/Icons/02.svg" alt="" /></button>
               <sup>2</sup>
             </li>
             <li>
-              <button onclick="accountPage()"><img src="./assets/img/Icons/03.png" alt="" /></button>
+              <button onclick="accountPage()"><img src="./assets/img/Icons/03.svg" alt="" /></button>
             </li>
           </ul>
         </div>
@@ -617,8 +617,8 @@
     <div class="search_box">
       <div class="search_box_wrapper">
         <form action="" class="search_bar">
-          <input type="search" placeholder="What are you searching for?" required />
-          <button type="submit"><i class="fas fa-check"></i></button>
+          <input type="search" placeholder="Type to Search..." required />
+          <button type="submit"><i class="fas fa-magnifying-glass"></i></button>
         </form>
         <div class="close_search">
           <i class="fas fa-xmark"></i>
