--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./assets/css/fontawesome.min.css" />
 
     <!-- favicon -->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="./assets/img/company/Logo (Fabicon).svg" type="image/x-icon" />
 
     <!-- custom CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css" />
@@ -181,19 +181,19 @@
           </nav>
           <div class="header_logo">
             <a href="index.html">
-              <img src="./assets/img/company/01.png" alt="" />
+              <img src="./assets/img/company/01.svg" alt="" />
             </a>
           </div>
           <ul class="header_right">
             <li class="search_icon">
-              <button><img src="./assets/img/Icons/01.png" alt="" /></button>
+              <button><img src="./assets/img/Icons/01.svg" alt="" /></button>
             </li>
             <li class="cart_icon">
-              <button><img src="./assets/img/Icons/02.png" alt="" /></button>
+              <button><img src="./assets/img/Icons/02.svg" alt="" /></button>
               <sup>2</sup>
             </li>
             <li>
-              <button onclick="accountPage()"><img src="./assets/img/Icons/03.png" alt="" /></button>
+              <button onclick="accountPage()"><img src="./assets/img/Icons/03.svg" alt="" /></button>
             </li>
           </ul>
         </div>
