All links are added to menu and fixed login options to flex and fonts changed to nunito

--- a/product_list.html
+++ b/product_list.html
@@ -55,24 +55,24 @@
                   <li>
                     <h1 class="sm_heading">Top</h1>
                     <ul>
-                      <li><a href="#">T-shirt</a></li>
-                      <li><a href="#">Shirts</a></li>
-                      <li><a href="#">Sweatshits</a></li>
+                      <li><a href="product_list.html">T-shirt</a></li>
+                      <li><a href="product_list.html">Shirts</a></li>
+                      <li><a href="product_list.html">Sweatshits</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="#">Sweatpants</a></li>
-                      <li><a href="#">shorts</a></li>
-                      <li><a href="#">pants</a></li>
+                      <li><a href="product_list.html">Sweatpants</a></li>
+                      <li><a href="product_list.html">shorts</a></li>
+                      <li><a href="product_list.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="#">Jackets</a></li>
-                      <li><a href="#">Fannels</a></li>
+                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -91,24 +91,24 @@
                   <li>
                     <h1 class="sm_heading">Top</h1>
                     <ul>
-                      <li><a href="#">T-shirt</a></li>
-                      <li><a href="#">Shirts</a></li>
-                      <li><a href="#">Sweatshits</a></li>
+                      <li><a href="product_list.html">T-shirt</a></li>
+                      <li><a href="product_list.html">Shirts</a></li>
+                      <li><a href="product_list.html">Sweatshits</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="#">Sweatpants</a></li>
-                      <li><a href="#">shorts</a></li>
-                      <li><a href="#">pants</a></li>
+                      <li><a href="product_list.html">Sweatpants</a></li>
+                      <li><a href="product_list.html">shorts</a></li>
+                      <li><a href="product_list.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="#">Jackets</a></li>
-                      <li><a href="#">Fannels</a></li>
+                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -126,25 +126,25 @@
                   <li>
                     <h1 class="sm_heading">Men</h1>
                     <ul>
-                      <li><a href="#">T-shirt</a></li>
-                      <li><a href="#">Shirts</a></li>
-                      <li><a href="#">Sweatshits</a></li>
-                      <li><a href="#">Jackets</a></li>
+                      <li><a href="product_list.html">T-shirt</a></li>
+                      <li><a href="product_list.html">Shirts</a></li>
+                      <li><a href="product_list.html">Sweatshits</a></li>
+                      <li><a href="product_list.html">Jackets</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Bottoms</h1>
                     <ul>
-                      <li><a href="#">Sweatpants</a></li>
-                      <li><a href="#">T-shirts</a></li>
-                      <li><a href="#">pants</a></li>
+                      <li><a href="product_list.html">Sweatpants</a></li>
+                      <li><a href="product_list.html">T-shirts</a></li>
+                      <li><a href="product_list.html">pants</a></li>
                     </ul>
                   </li>
                   <li>
                     <h1 class="sm_heading">Outerwear</h1>
                     <ul>
-                      <li><a href="#">Jackets</a></li>
-                      <li><a href="#">Fannels</a></li>
+                      <li><a href="product_list.html">Jackets</a></li>
+                      <li><a href="product_list.html">Fannels</a></li>
                     </ul>
                   </li>
                 </ul>
@@ -163,11 +163,13 @@
               <i class="fas fa-xmark"></i>
             </button>
           </nav>
+
           <div class="header_logo">
             <a href="index.html">
               <img src="./assets/img/company/01.svg" alt="" />
             </a>
           </div>
+
           <ul class="header_right">
             <li class="search_icon">
               <button><img src="./assets/img/Icons/01.svg" alt="" /></button>
@@ -177,7 +179,7 @@
               <sup>2</sup>
             </li>
             <li>
-              <button onclick="accountPage()"><img src="./assets/img/Icons/03.svg" alt="" /></button>
+              <a href="./login.html"><img src="./assets/img/Icons/03.svg" alt="" /></a>
             </li>
           </ul>
         </div>
@@ -624,7 +626,7 @@
             <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="about.html">About Us</a></li>
-              <li><a href="#">Cupons</a></li>
+
               <li><a href="faq.html">F.A.Q</a></li>
               <li><a href="contact.html">Contact Us</a></li>
             </ul>
